--- a/app/src/main/res/layout/activity_main_fragment.xml
+++ b/app/src/main/res/layout/activity_main_fragment.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom=""
     tools:context=".MainFragmentActivity">
+
     <Button
-        android:id="@+id/firstFragment"
-        android:layout_width="match_parent"
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First Fragment"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        />
+        android:text="Fragment A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.043" />
+
     <Button
-        android:id="@+id/secondFragment"
-        android:layout_width="match_parent"
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="Second Fragment"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        />
+        android:text="Fragment B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.153" />
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        />
-</LinearLayout>
+        android:layout_margin="10dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
