--- a/app/src/main/res/layout/activity_main_fragment.xml
+++ b/app/src/main/res/layout/activity_main_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".MainFragmentActivity">
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/firstFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fragment A"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.043" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/secondFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fragment B"
