--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".FragmentA">
 
+
+
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#4CAF50"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
